--- a/index.html
+++ b/index.html
@@ -9,24 +9,19 @@
       const root = ReactDOM.createRoot(app);
 
       function Header({ title }) {
-  return <h1>{createTitle(title)}</h1>;
+  return <h1>{title ? title : "Default Title"}</h1>;
 }
 
-      function createTitle(title) {
-  if (title) {
-    return title;
-  } else {
-    return 'Default title';
-  }
-}
 
       function HomePage() {
-        return (
-          <div>
-            <Header title="React" />
-          </div>
-        );
-      }
+  return (
+    <div>
+      <Header title="React"/>
+      <Header title="React" />
+      <Header title="A new title" />
+    </div>
+  );
+}
 
       root.render(<HomePage />);
     </script>
